--- a/Site/index.html
+++ b/Site/index.html
@@ -6,6 +6,6 @@
     <title>Hello Coursera</title>
 </head>
 <body>
-  <h1> Hello coursera people </h1>  
+  <h1> Coursera is a great webiste </h1>  
 </body>
 </html>
